--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
   },
   "dependencies": {
     "classnames": "^2.3.2",
+    "lodash.groupby": "^4.6.0",
+    "lodash.keyby": "^4.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1"
   },
   "devDependencies": {
+    "@types/lodash.groupby": "^4.6.7",
+    "@types/lodash.keyby": "^4.6.7",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
+    "tailwind-styled-components": "^2.2.0",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
