--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lodash.keyby": "^4.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "react-tracked": "^1.7.11"
   },
   "devDependencies": {
     "@types/lodash.groupby": "^4.6.7",
